--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "express": "^4.13.1",
-    "path": "^0.11.14"
+    "path": "^0.11.14",
+    "socket.io": "^1.3.6"
   }
 }
