reload previous messages from channel

--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "license": "Copyright 2013, Hack Reactor. All rights reserved.",
   "scripts": {
     "test": "mocha server/spec",
-    "start": "nodemon server/basic-server"
-  },
-  "devDependencies": {
-    "mocha": "^1.21.4",
-    "request": "^2.34.0",
-    "chai": "^1.9.0"
+    "start": "nodemon server/app"
   },
   "dependencies": {
     "express": "^4.13.1",
