--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.13.1",
     "path": "^0.11.14",
-    "socket.io": "^1.3.6"
+    "socket.io": "^1.3.6",
+    "underscore": "^1.8.3"
   }
 }
